--- a/.github/workflows/ai-support.yml
+++ b/.github/workflows/ai-support.yml
@@ -34,6 +34,10 @@ on:
     secrets:
       COPILOT_MCP_GITHUB_TOKEN:
         required: true
+      APP_ID:
+        required: true
+      APP_PRIVATE_KEY:
+        required: true
 
 jobs:
   gate:
@@ -51,7 +55,7 @@ jobs:
             exit 0
           fi
           BOT_COMMENTED=$(gh api "/repos/${{ github.repository }}/issues/${{ inputs.issue_number }}/comments" \
-            --jq '[.[] | select(.user.login == "github-actions[bot]")] | length')
+            --jq '[.[] | select(.user.login == "mineacademy[bot]" or .user.login == "github-actions[bot]")] | length')
           if [ "$BOT_COMMENTED" -gt "0" ]; then
             echo "should_respond=true" >> "$GITHUB_OUTPUT"
           else
@@ -64,28 +68,38 @@ jobs:
     if: needs.gate.outputs.should_respond == 'true'
     runs-on: ubuntu-latest
     steps:
+      - name: Generate app token
+        id: app_token
+        uses: actions/create-github-app-token@v1
+        with:
+          app-id: ${{ secrets.APP_ID }}
+          private-key: ${{ secrets.APP_PRIVATE_KEY }}
+          repositories: ChatControl,Boss,CoreArena,Protect,Winter-Src,ai-support,foundation
+
       - name: Checkout project
         uses: actions/checkout@v4
         with:
+          token: ${{ steps.app_token.outputs.token }}
           path: main
 
       - name: Checkout Foundation
         uses: actions/checkout@v4
         with:
           repository: kangarko/foundation
+          token: ${{ steps.app_token.outputs.token }}
           path: foundation
 
       - name: Checkout AI support
         uses: actions/checkout@v4
         with:
           repository: kangarko/ai-support
-          token: ${{ secrets.COPILOT_MCP_GITHUB_TOKEN }}
+          token: ${{ steps.app_token.outputs.token }}
           path: ai-support
 
       - name: Fetch conversation history
         if: inputs.comment_body != ''
         env:
-          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ steps.app_token.outputs.token }}
         run: |
           gh api "/repos/${{ github.repository }}/issues/${{ inputs.issue_number }}/comments" \
             --paginate > conversation.json
@@ -133,8 +147,8 @@ jobs:
             echo "No insight changes"
             exit 0
           fi
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config user.name "mineacademy[bot]"
+          git config user.email "2869176+mineacademy[bot]@users.noreply.github.com"
           git commit -m "Learn from ${{ github.repository }}#${ISSUE_NUM}"
           git pull --rebase origin main 2>/dev/null || true
           git push origin main
@@ -144,7 +158,7 @@ jobs:
         id: fix_pr
         continue-on-error: true
         env:
-          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ steps.app_token.outputs.token }}
           ISSUE_NUM: ${{ inputs.issue_number }}
           ISSUE_TITLE: ${{ inputs.issue_title }}
         run: |
@@ -158,8 +172,8 @@ jobs:
 
           BRANCH="fix/issue-${ISSUE_NUM}"
 
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config user.name "mineacademy[bot]"
+          git config user.email "2869176+mineacademy[bot]@users.noreply.github.com"
           git checkout -b "$BRANCH"
           git commit -m "Proposed fix for #${ISSUE_NUM}"
           git push -f origin "$BRANCH"
@@ -186,7 +200,7 @@ jobs:
       - name: Post response comment
         if: "!cancelled() && hashFiles('response.md') != ''"
         env:
-          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ steps.app_token.outputs.token }}
         run: |
           gh issue comment "${{ inputs.issue_number }}" \
             --repo "${{ github.repository }}" \
@@ -195,7 +209,7 @@ jobs:
       - name: Post failure diagnostic
         if: "failure() && !steps.fix_pr.outcome && hashFiles('failure.md') != ''"
         env:
-          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ steps.app_token.outputs.token }}
         run: |
           gh issue comment "${{ inputs.issue_number }}" \
             --repo "${{ github.repository }}" \
