--- a/.github/workflows/ai-support.yml
+++ b/.github/workflows/ai-support.yml
@@ -55,7 +55,7 @@ jobs:
             echo "should_respond=true" >> "$GITHUB_OUTPUT"
             exit 0
           fi
-          if echo "$COMMENT_BODY" | grep -qi "@kangobot"; then
+          if echo "$COMMENT_BODY" | grep -qiE "@kangobot|/kangobot"; then
             echo "Bot was mentioned — responding"
             echo "should_respond=true" >> "$GITHUB_OUTPUT"
             exit 0
