Fix session timeout: use send_and_wait with stall detection, retry, pin versions

--- a/.github/workflows/ai-support.yml
+++ b/.github/workflows/ai-support.yml
@@ -117,7 +117,7 @@ jobs:
           node-version: "20"
 
       - name: Install Copilot CLI
-        run: npm install -g @github/copilot
+        run: npm install -g @github/copilot@0.0.414
 
       - name: Setup Python
         uses: actions/setup-python@v5
