Add GitHub code search/fetch tools & subagent
Add known_dependencies lists to several config YAMLs (boss, chatcontrol, corearena, protect, winter).

Enhance responder.py to better investigate third-party ClassNotFoundException issues: import base64, add extract_class_not_found, _github_api_headers, search_github_code and fetch_github_file tools, and a run_research_subagent that verifies classes against known dependency repos on GitHub. Reuse header builder across GitHub API calls, surface HTTP response bodies in error messages, improve PR close branch deletion messaging, include new tools in the main toolset, and integrate a research section into the agent prompt. Also refactor session creation into a reusable session_config and remove "web_fetch" from the excluded tools list.

--- a/config/boss.yml
+++ b/config/boss.yml
@@ -27,3 +27,20 @@ extra_rules: |
   - Boss supports Citizens NPC integration and ModelEngine custom models
 
 docs_url: "https://docs.mineacademy.org/boss/"
+
+known_dependencies:
+  Citizens: CitizensDev/CitizensAPI
+  WorldGuard: EngineHub/WorldGuard
+  WorldEdit: EngineHub/WorldEdit
+  GriefPrevention: GriefPrevention/GriefPrevention
+  Lands: IncrediblePlugins/LandsAPI
+  RoseStacker: Rosewood-Development/RoseStacker
+  Vault: MilkBowl/VaultAPI
+  PlaceholderAPI: PlaceholderAPI/PlaceholderAPI
+  ProtocolLib: dmulloy2/ProtocolLib
+  Towny: TownyAdvanced/Towny
+  DiscordSRV: DiscordSRV/DiscordSRV
+  LuckPerms: LuckPerms/LuckPerms
+  AuthMe: AuthMe/AuthMeReloaded
+  Essentials: EssentialsX/Essentials
+  Factions: MassiveCraft/Factions
